<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".EditDataActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/in_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:background="@drawable/border_edit_text"
            android:layout_marginBottom="@dimen/padding_all"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/in_dept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_dept"
            android:background="@drawable/border_edit_text"
            android:layout_marginBottom="@dimen/padding_all"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/in_sly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_sly"
            android:background="@drawable/border_edit_text"
            android:layout_marginBottom="@dimen/padding_all"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:text="@string/btn_edit"
            android:background="@drawable/button_rounded_corner"/>
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:text="@string/btn_delete"
            android:background="@drawable/button_rounded_delete"/>

    </LinearLayout>



</LinearLayout>