<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".AddDataActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/in_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:background="@drawable/border_edit_text"
            android:layout_marginBottom="@dimen/padding_all"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/in_dept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_dept"
            android:background="@drawable/border_edit_text"
            android:layout_marginBottom="@dimen/padding_all"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/in_sly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_sly"
            android:background="@drawable/border_edit_text"
            android:layout_marginBottom="@dimen/padding_all"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/btn_add"
        android:background="@drawable/button_rounded_corner"/>

</LinearLayout>